; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/ti/wl1251/extr_sdio.c_wl1251_sdio_interrupt.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/ti/wl1251/extr_sdio.c_wl1251_sdio_interrupt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sdio_func = type { i32 }
%struct.wl1251 = type { i32, i32 }

@DEBUG_IRQ = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [4 x i8] c"IRQ\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.sdio_func*)* @wl1251_sdio_interrupt to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @wl1251_sdio_interrupt(%struct.sdio_func* %0) #0 {
  %2 = alloca %struct.sdio_func*, align 8
  %3 = alloca %struct.wl1251*, align 8
  store %struct.sdio_func* %0, %struct.sdio_func** %2, align 8
  %4 = load %struct.sdio_func*, %struct.sdio_func** %2, align 8
  %5 = call %struct.wl1251* @sdio_get_drvdata(%struct.sdio_func* %4)
  store %struct.wl1251* %5, %struct.wl1251** %3, align 8
  %6 = load i32, i32* @DEBUG_IRQ, align 4
  %7 = call i32 @wl1251_debug(i32 %6, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0))
  %8 = load %struct.wl1251*, %struct.wl1251** %3, align 8
  %9 = getelementptr inbounds %struct.wl1251, %struct.wl1251* %8, i32 0, i32 1
  %10 = load i32, i32* %9, align 4
  %11 = load %struct.wl1251*, %struct.wl1251** %3, align 8
  %12 = getelementptr inbounds %struct.wl1251, %struct.wl1251* %11, i32 0, i32 0
  %13 = call i32 @ieee80211_queue_work(i32 %10, i32* %12)
  ret void
}

declare dso_local %struct.wl1251* @sdio_get_drvdata(%struct.sdio_func*) #1

declare dso_local i32 @wl1251_debug(i32, i8*) #1

declare dso_local i32 @ieee80211_queue_work(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
